fix(#8): increase icon-link gap to 0.3rem

--- a/style.css
+++ b/style.css
@@ -385,7 +385,7 @@ body {
 }
 
 .footer-icon + a {
-  margin-left: 0.1rem;
+  margin-left: 0.3rem;
 }
 
 .footer-brand {
